multiple tune ups for better queries, better structure and suitable components results

--- a/models/category/fields.yaml
+++ b/models/category/fields.yaml
@@ -14,7 +14,9 @@ fields:
         span: right
         placeholder: rainlab.blog::lang.category.slug_placeholder
         preset: name
-
+    color:
+        label: rainlab.blog::lang.category.color
+        type: colorpicker
     description:
         label: 'rainlab.blog::lang.category.description'
         size: large
