--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -44,3 +44,6 @@
 1.2.17: Improved the next and previous logic to sort by the published date.
 1.2.18: Minor change to internals.
 1.2.19: Improved support for Build 420+
+1.2.20:
+    - Colors
+    - add_category_color.php
